--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,7 @@ node_js:
   - "6"
   - "7"
   - "8"
+before_install:
+  - pip install --user codecov
 after_success:
   - codecov --file coverage/lcov.info --disable search
